--- a/BasicPacMan/BasicPacMan/BasicPacMan.vbproj
+++ b/BasicPacMan/BasicPacMan/BasicPacMan.vbproj
@@ -71,11 +71,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.vb">
+    <Compile Include="DynamicBitmap.vb" />
+    <Compile Include="patmanMain.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="patmanMain.Designer.vb">
+      <DependentUpon>patmanMain.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -93,8 +94,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="patmanMod.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="patmanMain.resx">
+      <DependentUpon>patmanMain.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
@@ -112,6 +117,15 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\patman.png" />
+    <Content Include="Resources\sndChomp.wav" />
+    <Content Include="Resources\sndGhostDies.wav" />
+    <Content Include="Resources\sndKillMode.wav" />
+    <Content Include="Resources\sndPatmanDies.wav" />
+    <Content Include="Resources\sndSiren.wav" />
+    <Content Include="Resources\sndTheme.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
