--- a/BasicPacMan/BasicPacMan/BasicPacMan.vbproj
+++ b/BasicPacMan/BasicPacMan/BasicPacMan.vbproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DynamicBitmap.vb" />
+    <Compile Include="FPS.vb" />
     <Compile Include="patmanMain.vb">
       <SubType>Form</SubType>
     </Compile>
